--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,12 +38,12 @@ jobs:
       - name: Build
         run: cd backend && cargo build --release
       - name: Move to windows filename
-        run: mv backend/target/release/haste-health ./haste-health_windows
+        run: mv backend/target/release/haste-health.exe ./haste-health_windows.exe
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            haste-health_windows
+            haste-health_windows.exe
   mac:
     runs-on: macos-latest
     permissions:
