--- a/.github/workflows/publish_sites.yml
+++ b/.github/workflows/publish_sites.yml
@@ -6,12 +6,12 @@ on:
 jobs:
   rust_book:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
         # Use nightly so can have access to unstable options for rustdoc.
       - run: rustup update nightly && rustup default nightly
       # Compile with workspace entry with the enable-index-page flag.
@@ -25,5 +25,35 @@ jobs:
         with:
           wranglerVersion: "4.50.0"
           workingDirectory: "backend"
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+  typedoc:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: EnableCorePack
+        run: corepack enable
+
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 23.9.0
+
+      # Compile with typescript documentation.
+      - name: Compile documentation.
+        run: cd frontend && pnpm generate-documentation
+
+      - name: Copy wrangler config
+        run: cp frontend/wrangler/typedoc.wrangler.jsonc ./frontend/wrangler.jsonc
+      - name: Build & Deploy Worker
+        uses: cloudflare/wrangler-action@v3
+        with:
+          wranglerVersion: "4.50.0"
+          workingDirectory: "frontend"
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
