--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,11 @@
     "packages/*",
     "artifacts/**/*"
   ],
+  "scripts": {
+    "generate-documentation": "pnpm typedoc"
+  },
   "devDependencies": {
+    "typedoc": "^0.28.15",
     "typescript": "^5.9.2"
   }
 }
